<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">智慧社区</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Username">账号</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记了密码?</string>
    <string name="go">登录</string>
    <string name="repeat_password">再输入一遍</string>
    <string name="next">注册</string>
    <string name="register">注册</string>
    <string name="six_password">六位操作密码</string>
    <string name="ipnone">电话</string>
    <string name="email">邮箱</string>
    <string name="validate_code">短信验证码</string>
    <string name="idcard">身份证号</string>
    <string name="title_activity_shop_detail">ShopDetailActivity</string>


</resources>
