<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".controller.activity.LoginAcitivity"
    >

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="35dp"
        android:layout_width="350dp"
        android:layout_height="440dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="350dp"
            android:layout_height="380dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/register"
                    android:textColor="#FFCC00"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginLeft="50dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:paddingEnd="30dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:hint="@string/Username"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#101010"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="20sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="50dp"
                    android:layout_marginTop="15dp"
                    android:paddingRight="30dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#c5c5c5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="20sp"
                            android:hint="@string/Password"
                            android:textColor="#101010"
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:background="@drawable/selector_bg_edit"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="30dp">
                    <android.support.design.widget.TextInputLayout
                        android:textColorHint="#c5c5c5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="20sp"
                            android:textColor="#101010"
                            android:hint="@string/repeat_password"
                            android:id="@+id/et_repeatpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:paddingBottom="2dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <Button
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/bt_go"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:background="@drawable/bt_shape"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/next"
                    >
                </Button>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>

</RelativeLayout>
