<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.activity.LoginAcitivity"
    >

    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="380dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/cv"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <View
                    android:layout_alignParentStart="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="#2fa881"
                    android:layout_alignParentLeft="true" />
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="50dp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="50dp"
                android:paddingRight="30dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="20sp"
                        android:hint="@string/Username"
                        android:textColor="#101010"
                        android:id="@+id/et_login_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="50dp"
                android:paddingEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingRight="30dp"
                android:paddingLeft="50dp">
                <android.support.design.widget.TextInputLayout
                    android:textColorHint="#c5c5c5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="20sp"
                        android:hint="@string/Password"
                        android:textColor="#101010"
                        android:id="@+id/et_login_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:paddingBottom="2dp"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <Button
                    android:id="@+id/bt_go"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/go"
                    >
                </Button>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#9a9a9a"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>




    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_marginTop="28dp"
        android:layout_alignTop="@+id/cv"
        android:layout_alignRight="@+id/cv"
        android:layout_alignEnd="@+id/cv" />



    <!--   <LinearLayout
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:text="用户名："
               android:textSize="25sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <EditText
               android:id="@+id/et_login_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
       </LinearLayout>
       <LinearLayout
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:text="密    码："
               android:textSize="25sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />
           <EditText
               android:password="true"
               android:id="@+id/et_login_pwd"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
       </LinearLayout>

       <LinearLayout
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <Button
               android:id="@+id/bt_login_regist"
               android:text="注册"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content" />
           <Button
               android:id="@+id/bt_login_login"
               android:text="登录"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content" />
       </LinearLayout>-->

</RelativeLayout>
